<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy_950">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@color/navy_900"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="8dp">

            <ImageButton android:id="@+id/backButton" style="@style/ToolbarIconButton" android:src="@drawable/ic_back" android:contentDescription="@string/back"/>
            <ImageButton android:id="@+id/forwardButton" style="@style/ToolbarIconButton" android:src="@drawable/ic_forward" android:contentDescription="@string/forward"/>
            <ImageButton android:id="@+id/homeButton" style="@style/ToolbarIconButton" android:src="@drawable/ic_home" android:contentDescription="@string/home"/>
            <ImageButton android:id="@+id/reloadButton" style="@style/ToolbarIconButton" android:src="@drawable/ic_refresh" android:contentDescription="@string/reload"/>

            <EditText
                android:id="@+id/addressBar"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@drawable/address_background"
                android:hint="@string/search_hint"
                android:imeOptions="actionGo"
                android:inputType="textUri"
                android:paddingHorizontal="14dp"
                android:singleLine="true"
                android:textColor="#17202A"
                android:textColorHint="#667788"
                android:textDirection="ltr"/>

            <ImageButton android:id="@+id/voiceButton" style="@style/ToolbarIconButton" android:src="@drawable/ic_mic" android:contentDescription="@string/voice_prompt"/>
            <ImageButton android:id="@+id/favoriteButton" style="@style/ToolbarIconButton" android:src="@drawable/ic_star" android:contentDescription="@string/favorites"/>
            <ImageButton android:id="@+id/desktopButton" style="@style/ToolbarIconButton" android:src="@drawable/ic_desktop" android:contentDescription="@string/display_mode"/>
            <ImageButton android:id="@+id/themeButton" style="@style/ToolbarIconButton" android:src="@drawable/ic_theme" android:contentDescription="@string/theme_toggle"/>
            <ImageButton android:id="@+id/tabsButton" style="@style/ToolbarIconButton" android:src="@drawable/ic_tabs" android:contentDescription="@string/tabs"/>
            <ImageButton android:id="@+id/privateButton" style="@style/ToolbarIconButton" android:src="@drawable/ic_private" android:contentDescription="@string/private_mode"/>
            <ImageButton android:id="@+id/moreButton" style="@style/ToolbarIconButton" android:src="@drawable/ic_more" android:contentDescription="@string/more"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondaryToolbar"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@color/navy_900"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="4dp"
            android:visibility="gone">
            <ImageButton android:id="@+id/playerButton" style="@style/ToolbarIconButton" android:src="@drawable/ic_play" android:contentDescription="@string/player"/>
            <ImageButton android:id="@+id/iptvButton" style="@style/ToolbarIconButton" android:src="@drawable/ic_tv" android:contentDescription="@string/iptv"/>
            <ImageButton android:id="@+id/filesButton" style="@style/ToolbarIconButton" android:src="@drawable/ic_folder" android:contentDescription="@string/files"/>
            <ImageButton android:id="@+id/settingsButton" style="@style/ToolbarIconButton" android:src="@drawable/ic_settings" android:contentDescription="@string/settings"/>
            <ImageButton android:id="@+id/closeButton" style="@style/ToolbarIconButton" android:src="@drawable/ic_close" android:contentDescription="@string/close_current_tab"/>
        </LinearLayout>

        <ProgressBar android:id="@+id/progressBar" style="?android:attr/progressBarStyleHorizontal" android:layout_width="match_parent" android:layout_height="3dp" android:max="100" android:visibility="gone"/>
        <FrameLayout android:id="@+id/webContainer" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"/>
    </LinearLayout>

    <com.raha.browser.tv.CursorOverlayView
        android:id="@+id/cursorOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:focusable="false"
        android:importantForAccessibility="no"
        android:visibility="gone"/>
</FrameLayout>
