<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:background="?attr/colorBackground" android:orientation="vertical" android:padding="22dp"><TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/files" android:textSize="28sp" android:textStyle="bold"/><TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/local_media_help" android:layout_marginVertical="10dp"/><LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal"><Button android:id="@+id/selectFolderButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/focusable_button" android:text="@string/select_usb_folder" android:textColor="@color/toolbar_text"/><Button android:id="@+id/selectSingleFileButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="12dp" android:background="@drawable/focusable_button" android:text="@string/select_file" android:textColor="@color/toolbar_text"/></LinearLayout><ListView android:id="@+id/mediaList" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:dividerHeight="8dp"/></LinearLayout>
