<?xml version="1.0" encoding="utf-8"?><ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:background="?attr/colorBackground"><LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:padding="32dp"><LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center_vertical"><Button android:id="@+id/backSettings" style="@style/ToolbarButton" android:text="‹"/><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settings" android:textSize="28sp" android:textStyle="bold"/></LinearLayout><Button android:id="@+id/themeSetting" style="@style/SettingButton"/><Button android:id="@+id/languageSetting" style="@style/SettingButton"/><Button android:id="@+id/directionSetting" style="@style/SettingButton"/><Button android:id="@+id/voiceLanguageSetting" style="@style/SettingButton"/><Button android:id="@+id/qualitySetting" style="@style/SettingButton"/><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pointer_speed" android:layout_marginTop="18dp"/><SeekBar android:id="@+id/pointerSpeedSetting" android:layout_width="match_parent" android:layout_height="wrap_content" android:max="60"/><Switch android:id="@+id/voiceCommandsSetting" android:layout_width="match_parent" android:layout_height="56dp" android:text="@string/voice_commands"/><Button android:id="@+id/clearHistorySetting" style="@style/SettingButton" android:text="@string/clear_history"/></LinearLayout></ScrollView>
