<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <androidx.media3.ui.PlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        app:resize_mode="fit"
        app:show_buffering="always"
        app:show_subtitle_button="true"
        app:surface_type="surface_view"
        app:use_controller="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="#66000000"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp">
        <ImageButton android:id="@+id/playerBack" style="@style/ToolbarIconButton" android:src="@drawable/ic_back" android:contentDescription="@string/back"/>
        <TextView android:id="@+id/playerTitle" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:ellipsize="end" android:maxLines="1" android:textColor="#FFFFFF" android:textSize="18sp"/>
        <Button android:id="@+id/playerSubtitle" android:layout_width="wrap_content" android:layout_height="42dp" android:text="@string/add_subtitle"/>
        <ImageButton android:id="@+id/playerSettings" style="@style/ToolbarIconButton" android:src="@drawable/ic_settings" android:contentDescription="@string/player_settings"/>
    </LinearLayout>
</FrameLayout>
